# Azure-Kinect-Samples

body-tracking-samples/: CMakeLists.txt
body-tracking-samples/sample_helper_includes/: RedisClient.cpp  RedisClient.h
body-tracking-samples/simple_3d_viewer_redis/: CMakeLists.txt  main.cpp  redis_keys.h
